tests/expected_output/missing_semicolon_line_before_assert/000001-clang-13.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/missing_semicolon_line_before_assert.c:5:5: error: called object type 'int' is not a function or function pointer
    assert(i == 10);
    ^
/usr/include/assert.h:108:3: note: expanded from macro 'assert'
  ((void) sizeof ((expr) ? 1 : 0), __extension__ ({                     \
  ^[0m
dcc explanation: there is probably a syntax error such as missing semi-colon on line 4 of tests/extracted_compile_time_errors/missing_semicolon_line_before_assert.c or an earlier line
